<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mFeed"
        android:title="@string/feed"
        android:icon="@drawable/ic_feed"
        />

    <item
        android:id="@+id/mChallenge"
        android:title="@string/challenges"
        android:icon="@drawable/ic_flag"
        />

    <item
        android:id="@+id/mAdd"
        android:title="@string/action"
        android:icon="@drawable/ic_baseline_add_circle_24"
        />

    <item
        android:id="@+id/mProfile"
        android:title="@string/profile"
        android:icon="@drawable/ic_avatar"
        />

    <item
        android:id="@+id/mSettings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        />
</menu>