<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg"
        tools:context=".RegisterActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/ic_bulb" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUsername"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_user_name"
                    android:inputType="textPersonName" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhone"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="@string/txt_terms_and_conditions"
                    android:textColor="@color/white"
                    android:textStyle="italic"

                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bg_edittext"
                    android:text="@string/btn_register"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/txt_or"
                    android:textColor="@color/app_green"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/txt_register_with"
                    android:textColor="@color/app_green"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btnFb"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_fb" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btnGoogle"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_google" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>
    </ScrollView>

</layout>
