<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AllCommentsFragment"
        android:padding="8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/title_all_comment"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/li_all_comment"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/tvAddComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_comment"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintBottom_toTopOf="@id/edtAddComment"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtAddComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="4"
            android:gravity="start"
            android:padding="12dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:background="@drawable/bg_stroked_edittext"
            app:layout_constraintEnd_toStartOf="@id/btnComment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAddComment"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnComment"
            android:gravity="center"
            android:background="@drawable/bg_edittext"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toEndOf="@id/edtAddComment"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/action_comment"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>